# Malayalam_word_finder

./: .gitignore  README.md  main.py  output.txt  pyproject.toml  synonyms_output.txt
models/: schemas.py
services/: word_service.py
