[project]
name = "malayalam-word-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi[standard]>=0.121.1",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.38.0",
]
